# epaper-tester

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
components/: epd_driver  lv_conf.h
main/: CMakeLists.txt  esp_efuse_custom_table.c  esp_efuse_custom_table.csv  main.cpp
main/assets/font/: index.h
main/include/: basic.h  esp_efuse_custom_table.h  fl_font.h  fl_icon.h  lvgl_rewrite.h
main/modules/: store.h
main/modules/app/: index.h  widget.cpp  widget.h
main/modules/app/services/: index.cpp  index.h
main/modules/common/components/: fl_widget.cpp  fl_widget.h  index.h  ui_utils.cpp  ui_utils.h
main/modules/common/models/: index.h
main/modules/common/utils/: fl_async.cpp  fl_async.h  fl_async_hardware.cpp  index.h
main/modules/include/: app_services.h  common_model.h  components.h  fl_utils.h
main/modules/tester/pack/: index.cpp  index.h
main/modules/tester/simple_page/: index.cpp  index.h
main/modules/tester/touch/: index.cpp  index.h
simulator/: CMakeLists.txt  Makefile  lv_conf.h  lv_drv_conf.h
simulator/main/.nvs/: README.md
simulator/main/mock/esp/: epd_driver.cpp  esp_heap_caps.cpp  esp_log.cpp  esp_sleep.cpp  esp_system.cpp  esp_timer.cpp
simulator/main/mock/esp/driver/: gpio.cpp
simulator/main/mock/freertos/: freertos.cpp
simulator/main/mock/freertos/include/freertos/: FreeRTOS.h  portmacro.h  projdefs.h  semphr.h  task.h
simulator/main/mock/include/: epd_driver.h  esp_basic.h  esp_efuse.h  esp_err.h  esp_heap_caps.h  esp_http_client.h  esp_log.h  esp_pm.h  esp_sleep.h  esp_timer.h  esp_wifi_types.h  gpio_types.h  nvs.h  powermon.h  sdkconfig.h
simulator/main/mock/include/driver/: gpio.h
simulator/main/mock/lvgl_epaper_drivers/lvgl_tft/: epdiy_epaper.cpp  epdiy_epaper.h
simulator/main/src/: config.h.in  main.cpp  mouse_cursor_icon.cpp  project.cpp  project.h
simulator/main/src/include/: index.h
